--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "nprogress": "0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "6.1.8",
-    "styled-media-query": "^2.1.2"
+    "styled-components": "6.1.8"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "7.6.15",
