--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
   },
   "typescript.tsdk": "./node_modules/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
+  "cSpell.language": "en,pt,pt_BR",
   "cSpell.words": [
     "autodocs",
     "nprogress"
